test/npm/haxe/openfl/errors/EOFErrorTest.hx
package openfl.errors;


class EOFErrorTest { public static function __init__ () { Mocha.describe ("Haxe | EOFError", function () {
	
	
	Mocha.it ("test", function () {
		
		// TODO: Confirm functionality
		
		var eofError = new EOFError ();
		Assert.notEqual (eofError, null);
		
	});
	
	
}); }}